objects/vlocity_cmt__DocumentClauseCondition__c.object
<CustomObject>
    <description>DEPRECATED (from 888.84). Use Template Section Conditions.</description>
    <fields>
        <fullName>vlocity_cmt__DocumentClauseId__c</fullName>
        <description>DEPRECATED.</description>
        <label>Document Clause</label>
        <referenceTo>vlocity_cmt__DocumentClause__c</referenceTo>
        <relationshipLabel>Document Clause Conditions</relationshipLabel>
        <relationshipName>Product_Terms_Conditions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <description>DEPRECATED.</description>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ProductId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>DEPRECATED.</description>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>Product_Terms_Conditions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Document Clause Condition</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Document Clause Conditions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>